# LLM-App

./: .gitignore  README.md  download_llama3.py  llm_server.py  pyproject.toml  rag.ipynb
llm_from_scratch/: llama.ipynb
