[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["congvmit <congvm.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
langchain = "^0.2.2"
accelerate = "^0.30.1"
transformers = "^4.41.2"
einops = "^0.8.0"
bitsandbytes = "^0.43.1"
sentence-transformers = "^3.0.0"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
